# thrushqc

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  Cargo.toml  README.md  build.rs
src/: README.md  main.rs
src/middle/optimizations/: mod.rs
src/middle_end/: mod.rs
wrappers/llvm/17/llvm-sys/: Cargo.toml  build.rs
wrappers/llvm/17/llvm-sys/src/: lib.rs
wrappers/llvm/17/llvm-sys/wrappers/: target.c
wrappers/llvm/inkwell/: Cargo.toml
